E2E Index Centering Fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -1015,3 +1015,7 @@ sup {font-size:xx-small; vertical-align:super;}
 	color: rgba(0,0,0, 1);
 	font-weight: normal;
 }
+
+.eye2eyeLogo {
+	text-align: center
+}
