--- a/css/styles.css
+++ b/css/styles.css
@@ -157,6 +157,11 @@ p.centered_text {
 	text-align: center;
 }
 
+a:hover {
+	text-decoration: none;
+	color: inherit;
+}
+
 a[href] {
 	font-weight: bold;
 	text-decoration: underline;
